# npapi-vlc

./: .cvsignore  .gitignore  AUTHORS  COPYING  Makefile.am  NEWS  axvlc.idl  configure.ac  test.html
activex/: .gitignore  Makefile.am  axvlc.idl  axvlc_rc.rc.in  connectioncontainer.cpp  connectioncontainer.h  main.cpp  olecontrol.cpp  oleinplaceactiveobject.cpp  oleinplaceobject.cpp  oleobject.cpp  persiststorage.cpp  persiststreaminit.cpp  plugin.cpp  plugin.h  position.h  viewobject.cpp  vlc_win32_fullscreen.cpp  vlc_win32_fullscreen.h  vlccontrol.cpp  vlccontrol2.cpp  vlccontrol2.h
common/: win32_fullscreen.cpp  win32_fullscreen.h
extras/macosx/: Info.plist.in
npapi/: Makefile.am  npvlc_rc.rc.in  vlc.r.in  vlc_win32_fullscreen.cpp  vlc_win32_fullscreen.h  vlcplugin.cpp  vlcplugin.h  vlcshell.cpp  vlcshell.h
npapi/control/: npolibvlc.cpp  nporuntime.cpp  nporuntime.h
npapi/support/: npunix.cpp  npwin.cpp
share/: Makefile.am
src/: Makefile.am  install.rdf.in  npvlc_rc.rc.in  vlc.r.in  vlcplugin.cpp  vlcplugin.h  vlcshell.h
src/support/: npwin.cpp
